--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/netlify": "^6.5.11",
     "@astrojs/react": "^4.3.1",
+    "@astrojs/vercel": "^8.2.8",
     "@tailwindcss/vite": "^4.1.13",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
